--- a/火神之心-重生.csproj
+++ b/火神之心-重生.csproj
@@ -33,4 +33,8 @@
       <Private>False</Private>
     </Reference>
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="items\" />
+  </ItemGroup>
 </Project>
