--- a/火神之心-重生.csproj
+++ b/火神之心-重生.csproj
@@ -18,6 +18,7 @@
     <Content Include="config.jsonc">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="items\示例物品.jsonc" />
   </ItemGroup>
 
   <ItemGroup>
@@ -32,9 +33,5 @@
       <HintPath>I:\TKF\SPT\0Harmony.dll</HintPath>
       <Private>False</Private>
     </Reference>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="items\" />
   </ItemGroup>
 </Project>
