解决解决方案的问题

--- a/items/示例物品.jsonc
+++ b/items/示例物品.jsonc
@@ -19,6 +19,7 @@
             "effects_damage": {}
         },
         "_customprops": {
+            //Test
             "$type": "buff",
             "Name": "Vulcan-范例针剂",
             "ShortName": "Example",
