--- a/火神之心-重生.csproj
+++ b/火神之心-重生.csproj
@@ -18,7 +18,9 @@
     <Content Include="config.jsonc">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="items\示例物品.jsonc" />
+    <Content Include="items\**\*">
+		<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	</Content>
   </ItemGroup>
 
   <ItemGroup>
